test/cases/parser/VarError2.errors
VarError2.b:5:13: Syntax error (expected term)
