test/cases/parser/VarError2.b
module VarError2
interface {
  function f()
  {
    var x = )
  }
}
